--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -127,10 +127,10 @@ AZ7_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
 AZ8_ADJ;Shuragel;;;;;;;;;;;;;x
 AZ8_absolute_monarchy2_ADJ;Armenian;;;;;;;;;;;;;x
 AZ8_democracy2_ADJ;Armenian;;;;;;;;;;;;;x
-AZ8_fascist_dictatorship_ADJ;Alagï¿½z;;;;;;;;;;;;;x
-AZ8_federal_democracy_ADJ;Alagï¿½z;;;;;;;;;;;;;x
+AZ8_fascist_dictatorship_ADJ;Alagíz;;;;;;;;;;;;;x
+AZ8_federal_democracy_ADJ;Alagíz;;;;;;;;;;;;;x
 AZ8_hms_government2_ADJ;Armenian;;;;;;;;;;;;;x
-AZ8_parliamentary_republic_ADJ;Alagï¿½z;;;;;;;;;;;;;x
+AZ8_parliamentary_republic_ADJ;Alagíz;;;;;;;;;;;;;x
 AZ8_prussian_constitutionalism2_ADJ;Armenian;;;;;;;;;;;;;x
 AZ8_rus_colonial_company_ADJ;Alexandropol;;;;;;;;;;;;;x
 AZ8_rus_dominion_ADJ;Alexandropol;;;;;;;;;;;;;x
