--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -21,13 +21,13 @@ AIN;Ainu;;;;;;;;;;;;;x
 AJM;Ajman;;;;;;;;;;;x
 AKH;Astrakhan;;;;;;;;;;;;;x
 ALB;Albania;Albanie;Albanien;;;;;;;;;;;x
-ALD;Algeria;Algï¿½rie;Algerien;;;;;;;;;;;x
+ALD;Algeria;Algérie;Algerien;;;;;;;;;;;x
 ALS;Alsace;;;;;;;;;;;;;x
 ALT;Altai Republic;;;;;;;;;;;;;x
 ANB;Anhalt-Bernburg;;;;;;;;;;;;;x
 ANG;Angola;;;;;;;;;;;;;x
 ANH;Anhalt-Dessau;;;;;;;;;;;;;x
-ANK;Anhalt-Kï¿½then;;;;;;;;;;;;;x
+ANK;Anhalt-Köthen;;;;;;;;;;;;;x
 ANT;Anatolia;;;;;;;;;;;;;x
 AOT;Aotearoa;Aotearoa;Aotearoa;;;;;;;;;;;x
 AOU;Oruro;;;;;;;;;;;;;x
@@ -38,7 +38,7 @@ ARA;Arabia;;;;;;;;;;;;;x
 ARC;Argentina;;;;;;;;;;;;;x
 ARE;Arenberg;;;;;;;;;;;;;x
 ARG;Argentina;Argentine;Argentinien;;;;;;;;;;;x
-ARM;Armenia;Armï¿½nie;Armenien;;;;;;;;;;;x
+ARM;Armenia;Arménie;Armenien;;;;;;;;;;;x
 ARO;Aro;;;;;;;;;;;;;x
 ARU;Arab Union;;;;;;;;;;;;;x
 ASC;Santa Cruz;;;;;;;;;;;x
@@ -51,7 +51,7 @@ ATC;Antillean Confederation;;;;;;;;;;;;;x
 ATH;Athos;;;;;;;;;;;;;x
 ATJ;Aceh;;;;;;;;;;;;;x
 ATR;Tarija;;;;;;;;;;;;;x
-AUS;Austria;Autriche;ï¿½sterreich;;;;;;;;;;;x
+AUS;Austria;Autriche;Österreich;;;;;;;;;;;x
 AWA;Awadh;Avadh;Awadh;;;;;;;;;;;x
 AWS;Aussa;Awsa;Awsa;;;;;;;;;;;x
 AZA;Azande;Azande;Azande;;;;;;;;;;;x
@@ -65,7 +65,7 @@ AZ6;Gazakh;;;;;;;;;;;;;x
 AZ7;Nakhichevan;;;;;;;;;;;;;x
 AZ8;Shuragel;;;;;;;;;;;;;x
 AZ9;Borchaly;;;;;;;;;;;;;x
-AZB;Azerbaijan;Azerbaï¿½djan;Aserbaidschan;;;;;;;;;;;x
+AZB;Azerbaijan;Azerbaïdjan;Aserbaidschan;;;;;;;;;;;x
 AZH;Anazzah;;;;;;;;;;;;;x
 BAB;Babylon;Babylone;Babylon;;;;;;;;;;;x
 BAD;Baden;Bade;Baden;;;;;;;;;;;x
@@ -73,11 +73,11 @@ BAH;Bahia;;;;;;;;;;;;;x
 BAL;Bali;Bali;Bali;;;;;;;;;;;x
 BAN;Banat;;;;;;;;;;;;;x
 BAS;Bastar;Bastar;Bastar;;;;;;;;;;;x
-BAV;Bavaria;Baviï¿½re;Bayern;;;;;;;;;;;x
+BAV;Bavaria;Baviére;Bayern;;;;;;;;;;;x
 BDK;Badakhshan;;;;;;;;;;;;;x
 BDN;Hakkari;;;;;;;;;;;;;x
 BEL;Belgium;Belgique;Belgien;;;;;;;;;;;x
-BEN;Benin;Bï¿½nin;Benin;;;;;;;;;;;x
+BEN;Benin;Bénin;Benin;;;;;;;;;;;x
 BER;Beroda;Beroda;Beroda;;;;;;;;;;;x
 BGN;Bulungan;;;;;;;;;;;;;x
 BGP;Banganapalle;;;;;;;;;;;;;x
@@ -101,19 +101,19 @@ BMK;Mali;;;;;;;;;;;;;x
 BNB;Baban;;;;;;;;;;;;;x
 BNG;Bengal;;;;;;;;;;;;;x
 BNY;Bunyoro;;;;;;;;;;;;;x
-BOH;Bohemia-Moravia;Bohï¿½me-Moravie;Bï¿½hmen-Mï¿½hren;;;;;;;;;;;x
+BOH;Bohemia-Moravia;Bohéme-Moravie;Böhmen-Mähren;;;;;;;;;;;x
 BOL;Bolivia;Bolivie;Bolivien;;;;;;;;;;;x
 BOR;Bhor;;;;;;;;;;;;;x
-BOS;Bosnia-Herzegovina;Bosnie-Herzï¿½govine;Bosnien-Herzegowina;;;;;;;;;;;x
+BOS;Bosnia-Herzegovina;Bosnie-Herzégovine;Bosnien-Herzegowina;;;;;;;;;;;x
 BRA;Brunswick;Brunswick;Braunschweig;;;;;;;;;;;x
 BRB;Barbados;;;;;;;;;;;;;x
 BRD;Burundi;;;;;;;;;;;;;x
-BRE;Bremen;Brï¿½me;Bremen;;;;;;;;;;;x
+BRE;Bremen;Bréme;Bremen;;;;;;;;;;;x
 BRM;Baguirmi;;;;;;;;;;;;;x
 BRT;Brittany;;;;;;;;;;;;;x
 BRU;Brunei;Brunei;Brunei;;;;;;;;;;;x
 BRY;Buryatia;;;;;;;;;;;;;x
-BRZ;Brazil;Brï¿½sil;Brasilien;;;;;;;;;;;x
+BRZ;Brazil;Brásil;Brasilien;;;;;;;;;;;x
 BSH;Lesotho;Basotho;Basotho;;;;;;;;;;;x
 BSQ;Basque Country;;;;;;;;;;;;;x
 BSR;al-Mazkur;;;;;;;;;;;;;x
@@ -177,8 +177,8 @@ COS;Costa Rica;Costa Rica;Costa Rica;;;;;;;;;;;x
 COU;Courland;;;;;;;;;;;;;x
 CPL;Congress Poland;Royaume du Congres;Kongresspolen;;;;;;;;;;;x
 CRB;Caribbean Federation;;;;;;;;;;;;;x
-CRE;Crete;Crï¿½te;Kreta;;;;;;;;;;;x
-CRI;Crimea;Crimï¿½e;Krim;;;;;;;;;;;x
+CRE;Crete;Créte;Kreta;;;;;;;;;;;x
+CRI;Crimea;Crimée;Krim;;;;;;;;;;;x
 CRL;Chitral;;;;;;;;;;;;;x
 CRO;Croatia;Croatie;Kroatien;;;;;;;;;;;x
 CRS;Corsica;;;;;;;;;;;;;x
@@ -190,57 +190,17 @@ CUO;Couto Misto;;;;;;;;;;;;;x
 CUY;Cuyo;;;;;;;;;;;;;x
 CYP;Cyprus;Chypre;Zypern;;;;;;;;;;;x
 CYR;Cyrenaica;;;;;;;;;;;;;x
-CZH;Czechoslovakia;Tchï¿½coslovaquie;Tschechoslowakei;;;;;;;;;;;x
-D01;Kingdom of $REGION$;;Das Kï¿½nigreich von $REGION$;;;;;;;;;;;x
-D02;Confederation of $REGION$;;Die Konfï¿½deration von $REGION$;;;;;;;;;;;x
+CZH;Czechoslovakia;Tchécoslovaquie;Tschechoslowakei;;;;;;;;;;;x
+D01;Kingdom of $REGION$;;Das Königreich von $REGION$;;;;;;;;;;;x
+D02;Confederation of $REGION$;;Die Konfäderation von $REGION$;;;;;;;;;;;x
 D03;Commonwealth of $REGION$;;Commonwealth von $REGION$;;;;;;;;;;;x
 D04;Republic of $REGION$;;Die Republik von $REGION$;;;;;;;;;;;x
 D05;$REGION$ Free State;;Der $REGION$-Staat;;;;;;;;;;;x
-D06;Peopleï¿½s Republic of $REGION$;;Die Volksrepublik von $REGION$;;;;;;;;;;;x
+D06;People's Republic of $REGION$;;Die Volksrepublik von $REGION$;;;;;;;;;;;x
 D07;Free State of $REGION$;;Der Freistaat von $REGION$;;;;;;;;;;;x
-D08;Grand State of $REGION$;;Der Groï¿½staat von $REGION$;;;;;;;;;;;x
+D08;Grand State of $REGION$;;Der Großstaat von $REGION$;;;;;;;;;;;x
 D09;State of $REGION$;;Der Staat von $REGION$;;;;;;;;;;;x
-D10;Principality of $REGION$;;Das Fï¿½rstentum von $REGION$;;;;;;;;;;;x
-D11;Democratic Republic of $REGION$;;Die Demokratische Republik von $REGION$;;;;;;;;;;;x
-D12;$REGION$ Union;;Die $REGION$-Union;;;;;;;;;;;x
-D13;$REGION$ Kingdom;;Das $REGION$-Kï¿½nigreich;;;;;;;;;;;x
-D14;Dominion of $REGION$;;Das Dominion von $REGION$;;;;;;;;;;;x
-D15;Grand Duchy of $REGION$;;Das Groï¿½herzogtum von $REGION$;;;;;;;;;;;x
-D16;$REGION$ Commonwealth;;Die $REGION$-Nation;;;;;;;;;;;x
-D17;$REGION$ Federation;;Die $REGION$-Fï¿½deration;;;;;;;;;;;x
-D18;United States of $REGION$;;Die Vereinigten Staaten von $REGION$;;;;;;;;;;;x
-D19;Union of $REGION$;;Die Demokratische Union von $REGION$;;;;;;;;;;;x
-D20;Princedom of $REGION$;;Das Fï¿½rstentum von $REGION$;;;;;;;;;;;x
-D21;Union of $REGION$;;Die Union von $REGION$;;;;;;;;;;;x
-D22;Peopleï¿½s Democratic Republic of $REGION$;;Die Demokratische Volksrepublik von $REGION$;;;;;;;;;;;x
-D23;$REGION$ Area;;Das $REGION$-Gebiet;;;;;;;;;;;x
-D24;Glorious Union of $REGION$;;Die Glorreiche Union von $REGION$;;;;;;;;;;;x
-D25;Mighty $REGION$;;Das mï¿½chtige Gebiet von $REGION$;;;;;;;;;;;x
-D26;$REGION$ Free State;;Der $REGION$-Freistaat;;;;;;;;;;;x
-D27;$REGION$ Commonwealth;;$REGION$-Commonwealth;;;;;;;;;;;x
-D28;$REGION$ Confederacy;;Die $REGION$-Konfï¿½deration;;;;;;;;;;;x
-D29;Free People of $REGION$;;Das Freie Volk von $REGION$;;;;;;;;;;;x
-D30;$REGION$ Republic;;Die $REGION$-Republik;;;;;;;;;;;x
-D31;Holy Union of $REGION$;;Die Heilige Union von $REGION$;;;;;;;;;;;x
-D32;Union of $REGION$;;Die Volks-Union von $REGION$;;;;;;;;;;;x
-D33;$REGION$ Federation;;Die Fï¿½derationsstaaten von $REGION$;;;;;;;;;;;x
-D34;$REGION$ Federal State;;Der $REGION$-Fï¿½derationsstaat;;;;;;;;;;;x
-D35;$REGION$ Confederation;;Die $REGION$-Konfï¿½deration;;;;;;;;;;;x
-D36;$REGION$ Federation;;Die $REGION$-Fï¿½deration;;;;;;;;;;;x
-D37;Pious Union of $REGION$;;Die Fromme Union von $REGION$;;;;;;;;;;;x
-D38;$REGION$ Land;;$REGION$-Land;;;;;;;;;;;x
-D39;Most Serene Republic of $REGION$;;Die Republik der Ruhe von $REGION$;;;;;;;;;;;x
-D40;Secret Kingdom of $REGION$;;Das Geheime Kï¿½nigreich von $REGION$;;;;;;;;;;;x
-D41;Commune of $REGION$;;Die Kommune von $REGION$;;;;;;;;;;;x
-D42;$REGION$ Commune;;Die $REGION$-Kommune;;;;;;;;;;;x
-D43;Workers Union of $REGION$;;Die Arbeiter-Union von $REGION$;;;;;;;;;;;x
-D44;Landgrave of $REGION$;;Die Landgrafschaft von $REGION$;;;;;;;;;;;x
-D45;Nation of $REGION$;;Die Nation von $REGION$;;;;;;;;;;;x
-D46;Holy $REGION$;;Die Heilige Region von $REGION$;;;;;;;;;;;x
-D47;$REGION$ Dominion;;Das $REGION$-Dominion;;;;;;;;;;;x
-D48;Peopleï¿½s State of $REGION$;;Der Volksstaat von $REGION$;;;;;;;;;;;x
-D49;High Kingdom of $REGION$;;Das Hohe Kï¿½nigreich von $REGION$;;;;;;;;;;;x
-D50;Lesser Duchy of $REGION$;;Das Kleinere Fï¿½rstentum von $REGION$;;;;;;;;;;;x
+D10;Principality of $REGION$;;Das Förstentum von $REGION$;;;;;;;;;;;x
 DAG;Dagestan;;;;;;;;;;;;;x		
 DA0;Avaristan;;;;;;;;;;;;;x
 DA1;Kaytag;;;;;;;;;;;;;x
@@ -298,7 +258,7 @@ FIU;Fiume;Fiume;Fiume;;;;;;;;;;;x
 FJN;Fujian;;;;;;;;;;;;;x
 FLA;Flanders;Flandres;Flandern;;;;;;;;;;;x
 FRA;France;France;Frankreich;;;;;;;;;;;x
-FRI;Fryslï¿½n;;;;;;;;;;;;;x
+FRI;Fryslân;;;;;;;;;;;;;x
 FRM;Frankfurt am Main;Francfort;Frankfurt am Main;;;;;;;;;;;x
 FRO;Faroe Islands;;;;;;;;;;;;;x
 FSA;Free States of America;;;;;;;;;;;;;x
@@ -333,7 +293,7 @@ GUY;Guyana;;;;;;;;;;;;;x
 GWA;Gwalior;Gwalior;Gwalior;;;;;;;;;;;x
 GXI;Guangxi;Clique de Guangxi;Guangxi-Clique;;;;;;;;;;;x
 HAI;Haiti;;;;;;;;;;;;;x
-HAL;Haï¿½il;;;;;;;;;;;;;x
+HAL;Ha'il;;;;;;;;;;;;;x
 HAM;Hamburg;Hambourg;Hamburg;;;;;;;;;;;x
 HAN;Hanover;Hanovre;Hannover;;;;;;;;;;;x
 HAR;Wollo;Wollo;Wollo;;;;;;;;;;;x
@@ -469,7 +429,7 @@ LPL;United Provinces;;;;;;;;;;;;;x
 LRJ;La Rioja;;;;;;;;;;;x
 LSK;Alaska;;;;;;;;;;;;;x
 LUA;Luang Prabang;Luang Prabang;Luang Prabang;;;;;;;;;;;x
-LUB;Lï¿½beck;Lï¿½beck;Lï¿½beck;;;;;;;;;;;x
+LUB;Lübeck;Lï¿½beck;Lï¿½beck;;;;;;;;;;;x
 LUC;Lucca;Lucques;Lucca;;;;;;;;;;;x
 LUN;Lunda;Lunda;Lunda;;;;;;;;;;;x
 LUW;Luwu;;;;;;;;;;;;;x
@@ -528,7 +488,7 @@ MSK;Misquito Coast;;;;;;;;;;;;;x
 MSN;Misiones;;;;;;;;;;;;;x
 MSS;Samos;;;;;;;;;;;;;x
 MST;Mecklenburg-Strelitz;;;;;;;;;;;;;x
-MTC;Mï¿½tis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konfï¿½deration;;;;;;;;;;;x
+MTC;Métis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konfï¿½deration;;;;;;;;;;;x
 MTQ;Martinique;;;;;;;;;;;;;x
 MUD;Mudhol;;;;;;;;;;;;;x
 MUG;Mughalistan;Mogholistan;Mughalistan;;;;;;;;;;;x
@@ -562,7 +522,7 @@ NRM;Normandy;;;;;;;;;;;;;x
 NSC;Nova Scotia;;;;;;;;;;;;;x
 NYE;North Yemen;;;;;;;;;;;;;x
 NZL;New Zealand;Nouvelle-Zï¿½lande;Neuseeland;;;;;;;;;;;x
-NZF;Nouvelle-Zï¿½lande;;;;;;;;;;;;;x
+NZF;Nouvelle-Zélande;;;;;;;;;;;;;x
 OAX;Oaxaca;;;;;;;;;;;;;x
 OCC;Occitania;Occitanie;Occitania;;;;;;;;;;;x
 OLD;Oldenburg;Oldenbourg;Oldenburg;;;;;;;;;;;x
@@ -583,7 +543,7 @@ PEU;Peru;Pï¿½rou;Peru;;;;;;;;;;;x
 PGG;Pingnan Guo;;;;;;;;;;;;;x
 PHG;Pahang;;;;;;;;;;;;;x
 PHL;Philippines;Philippines;Philippinen;;;;;;;;;;;x
-PIT;Pitu Baï¿½bana Binanga;;;;;;;;;;;;;x
+PIT;Pitu Ba'bana Binanga;;;;;;;;;;;;;x
 PLC;Polish-Lithuanian Commonwealth;Pologne-Lituanie;Polen-Litauen;;;;;;;;;;;x
 PLS;Palestine;;;;;;;;;;;;;x
 PML;Pomeralia;;;;;;;;;;;;;x
@@ -626,7 +586,7 @@ RLE;Reuss-Lobenstein-Ebersdorf;;;;;;;;;;;;;x
 RMG;Romagna;;;;;;;;;;;;;x
 RNC;Mountaineer's Republic;;;;;;;;;;;;;x
 ROM;Romania;Roumanie;Rumï¿½nien;;;;;;;;;;;x
-RPL;Rupertï¿½s Land;Assiniboia;;;;;;;;;;;;x
+RPL;Rupert's Land;Assiniboia;;;;;;;;;;;;x
 RPP;Rajpipla;;;;;;;;;;;;;x
 RSR;Reuss Elder Line;;;;;;;;;;;;;x
 RUM;Eastern Rumelia;;;;;;;;;;;;;x
@@ -637,7 +597,7 @@ RYU;Ryukyu;;;;;;;;;;;;;x
 SAA;Saarland;Sarre;Saarland;;;;;;;;;;;x
 SAF;South Africa;Afrique du Sud;Sï¿½dafrika;;;;;;;;;;;x
 SAK;Siak;;;;;;;;;;;;;x
-SAM;Sisam Imï¿½reti;;;;;;;;;;;;;x
+SAM;Sisam Imëreti;;;;;;;;;;;;;x
 SAR;Sardinia-Piedmont;Piï¿½mont-Sardaigne;Sardinien-Piemont;;;;;;;;;;;x
 SAT;Kyushu;;;;;;;;;;;;;x
 SAX;Saxony;Saxe;Sachsen;;;;;;;;;;;x
@@ -796,9 +756,9 @@ VEN;Venice;Venise;Venedig;;;;;;;;;;;x
 VFR;Vichy France;;;;;;;;;;;;;x
 VLG;Volgaland;;;;;;;;;;;;;x
 VLK;South African Republic;;;;;;;;;;;;;x
-VLP;Rï¿½o de la Plata;;;;;;;;;;;;;x
+VLP;Río de la Plata;;;;;;;;;;;;;x
 VNG;Nueva Granada;;;;;;;;;;;;;x
-VNS;Nueva Espaï¿½a;;;;;;;;;;;;;x
+VNS;Nueva España;;;;;;;;;;;;;x
 CGC;Chile;;;;;;;;;;;;;x
 VOP;Peru;;;;;;;;;;;;;x
 VNZ;Venezuela;Venezuela;Venezuela;;;;;;;;;;;x
@@ -820,7 +780,7 @@ WOL;Wolof;Djolof;Jolof;;;;;;;;;;;x
 WRI;Warri;Warri;Warri;;;;;;;;;;;x
 WRL;Warsangali;;;;;;;;;;;;;x
 WSF;Zapadoslavia;;;;;;;;;;;;;x
-WUR;Wï¿½rttemberg;Wurtemberg;Wï¿½rttemberg;;;;;;;;;;;x
+WUR;Württemberg;Wurtemberg;Wï¿½rttemberg;;;;;;;;;;;x
 XBI;Xibei San Ma;Xibei San Ma;Xibei San Ma;;;;;;;;;;;x
 XHO;Xhosa;Xhosa;Xhosa;;;;;;;;;;;x
 XIN;Xinjiang;Clique de Xinjiang;Xinjiang-Clique;;;;;;;;;;;x
@@ -834,6 +794,6 @@ ZAC;Zacatecas;;;;;;;;;;;;;x
 ZAM;Zambia;;;;;;;;;;;;;x
 ZAN;Zanzibar;Zanzibar;Sansibar;;;;;;;;;;;x
 ZBW;Zimbabwe;;;;;;;;;;;;;x
-ZFN;Zaï¿½faranlu;;;;;;;;;;;;;x
+ZFN;Zafaranlu;;;;;;;;;;;;;x
 ZOU;Zoutpansberg;;;;;;;;;;;;;x
 ZUL;Zulu;Zoulou;Zulu;;;;;;;;;;;x
