--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -897,6 +897,20 @@ EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
 EVTDESC8105;An Italian has joined our forces and brings much support for the uprising.;;;;;;;;;;;;;x
 EVTNAME8105;New Arrivals;;;;;;;;;;;;;x
 EVTOPTA8105;This will give us the chance we need to win;;;;;;;;;;;;;x
+EVTNAME8107;The Poncho Verde Treaty;;;;;;;;;;;;;x
+EVTDESC8107;The farrapos have proposed a treaty. Which is honestly outrageous! A treaty like that will need deep constitutional change, tax reforms and is straight up outrageous! The rebels are too cocky to think we would accept something like that.;;;;;;;;;;;;;x
+EVTOPTA8107;Accept the treaty anyway, this war can't go on anymore.;;;;;;;;;;;;;x
+EVTOPTB8107;To hell with this!;;;;;;;;;;;;;x
+EVTNAME8107;The Poncho Verde Treaty;;;;;;;;;;;;;x
+EVTDESC8107;\n\nThe Farroupilha proposed a treaty. Which is honestly outrageous! A treaty like that will need deep constitutional change, tax reforms and is straight up outrageous! The rebels are too cocky to think we would accept something like that.;;;;;;;;;;;;;x
+EVTOPTA8107;Accept the treaty anyway, this war can't go on anymore.;;;;;;;;;;;;;x
+EVTOPTB8107;To hell with this!;;;;;;;;;;;;;x
+EVTDESC8108;\nThe farraupilha proposed a treaty. Their treaty requires deep tax and protective tariffs to support their meat production and make it competitive against the argentine and uruguayan competition. Accepting the treaty would put an end to this war, but we are in position to push further and negotiate better terms.;;;;;;;;;;;;;x
+EVTOPTA8108;Accept the treaty, this war can't go on anymore.;;;;;;;;;;;;;x
+EVTOPTB8108;We can do better.;;;;;;;;;;;;;x
+EVTDESC8109;\nThe farraupilha proposed a treaty. They are on the verge of defeat and the terms greatly favor us,they require tax cuts and protective tariffs to ensure the survival of their production against the argentine and uruguayan competition, but the terms are good and fair. We should seriously consider accepting this offer.;;;;;;;;;;;;;x
+EVTOPTA8109;So be it.;;;;;;;;;;;;;x
+EVTOPTB8109;We will crush those rebels and give them nothing!;;;;;;;;;;;;;x
 EVTNAMEFARROUPILHAEND;The End of the Farroupilha;;;;;;;;;;;;;x
 EVTDESC8111;\nAfter a long and arduous struggle, Porto Alegre is under imperial control once again. Brazil emerges victorious against the Farrapos. \n\nWe crushed those rebels, we shall crush any others that come our way.;;;;;;;;;;;;;x
 EVTOPTA8111;Honor the dead.;;;;;;;;;;;;;x
