Small loc bugfix

--- a/TGC/localisation/00_military-units.csv
+++ b/TGC/localisation/00_military-units.csv
@@ -30,9 +30,9 @@ infantry_short;XXX;Inf.;Inf;;;;;;;;;;;x
 ironclad;Ironclad;Patrouilleur;Panzerschiff;;;;;;;;;;;x
 ironclad_short;IC;Patr.;IC;;;;;;;;;;;x
 irregular;Conscript;Irrégulier;Freischärler;;;;;;;;;;;x
-irregular_short;Cns;Irr.;Frsch;;;;;;;;;;;x
+irregular_short;Cns.;Irr.;Frsch;;;;;;;;;;;x
 irregular_infantry;Irregular;;;;;;;;;;;;;x
-irregular_infantry_short;Irr;;;;;;;;;;;;;x
+irregular_infantry_short;Irr.;;;;;;;;;;;;;x
 manowar;Man-o’-War;Man'o'War;Kriegsschiff;;;;;;;;;;;x
 manowar_short;MW;MW.;MW;;;;;;;;;;;x
 monitor;Monitor;Patrouilleur lourd;Monitor;;;;;;;;;;;x
@@ -40,7 +40,7 @@ monitor_short;MO;Patr.L.;MO;;;;;;;;;;;x
 plane;Airplane;Avion;Flugzeug;;;;;;;;;;;x
 plane_short;Air;Av.;Luft;;;;;;;;;;;x
 regular_infantry;Infantry;;;;;;;;;;;;;x
-regular_infantry_short;Inf;;;;;;;;;;;;;x
+regular_infantry_short;Inf.;;;;;;;;;;;;;x
 steam_transport;Steam Transport;Steamer;Dampf-Transporter;;;;;;;;;;;x
 steam_transport_short;ST;S.;DT;;;;;;;;;;;x
 tank;Armor;Blindé;Panzer;;;;;;;;;;;x
