--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2735,6 +2735,8 @@ the_french_menace_desc;While Germany has only been unified for a short amount of
 the_french_menace_title;The French Menace;;;;;;;;;;;;;x
 the_great_game_bukhara_desc;We must press our domination of Central Asia. This means that Bukhara must join our nation, or stand forever more subject to British aggression in the region.;;;;;;;;;;;;;x
 the_great_game_bukhara_title;The Great Game Comes to Bukhara;;;;;;;;;;;;;x
+the_great_game_darvaz_desc;We must press our domination of Central Asia. This means that Darvaz must join our nation, or stand forever more subject to British aggression in the region.;;;;;;;;;;;;;x
+the_great_game_darvaz_title;The Great Game Comes to Darvaz;;;;;;;;;;;;;x
 the_great_game_kalat_desc;We must press our domination of Central Asia. This means that Kalat must be subjugated as a British colony, or we risk losing it to Russian aggression in the region.;;;;;;;;;;;;;x
 the_great_game_kalat_title;The Great Game Comes to Kalat;;;;;;;;;;;;;x
 the_great_game_khiva_desc;We must press our domination of Central Asia. This means that Khiva must join our nation, or stand forever more subject to British aggression in the region.;;;;;;;;;;;;;x
