--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -69,6 +69,7 @@ BAV_ADJ;Bavarian;Bavarois;Bayerisch;;;;;;;;;;;x
 BDK_ADJ;Badakhshani;;;;;;;;;;;;;x
 BDN_ADJ;Hakkari;;;;;;;;;;;;;x
 BEL_ADJ;Belgian;Belge;Belgisch;;;;;;;;;;;x
+BRG_ADJ;Burgundian;;;;;;;;;;;;;x
 BEN_ADJ;Beninese;Béninois;Benin;;;;;;;;;;;x
 BER_ADJ;Berodan;Bérodien;Berodanisch;;;;;;;;;;;x
 BGN_ADJ;Bulungan;;;;;;;;;;;;;x
