--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -52,6 +52,7 @@ BAV;Bavaria;Bavière;Bayern;;;;;;;;;;;x
 BDK;Badakhshan;;;;;;;;;;;;;x
 BDN;Hakkari;;;;;;;;;;;;;x
 BEL;Belgium;Belgique;Belgien;;;;;;;;;;;x
+BRG;Burgundy;;;;;;;;;;;;;x
 BEN;Benin;Bénin;Benin;;;;;;;;;;;x
 BER;Beroda;Beroda;Beroda;;;;;;;;;;;x
 BGN;Bulungan;;;;;;;;;;;;;x
