--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -78,3 +78,4 @@ joined_lcu;Joined Latin Customs Union;;;;;;;;;x
 french_outside_italy;French-Lead Italy (Plombieres Vision);;;;;;;;;x
 austrian_outside_italy;Austrian-Lead Italy;;;;;;;;;x
 retaken_thirteen_colonies;Reiterated claims on Thirteen Colonies;;;;;;;;;x
+is_real_belgium;is Belgium or its recognized successor-state;;;;;;;;;x
