Circassian and Caucasus war

--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -406,6 +406,8 @@ NORMAL_WAR_RESTORE_ORDER_NAME_TIG_SHW;Zemene Mesafint;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_TUR_BHT;The $ORDER$Ottoman Intervention in Kurdistan;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;x
 NORMAL_WAR_RHINE_CRISIS;The Rhine Crisis;;;;;;;;;;;;;x
+NORMAL_WAR_RUS_CIR;The $ORDER$Russo-Circassian War;;;;;;;;;;;;;x
+NORMAL_WAR_RUS_DAG;The $ORDER$Murid War;;;;;;;;;;;;;x
 NORMAL_WAR_MEXICO_CONCESSION_RUS;Russian Invasion of California;;;;;;;;;;;;;x
 NORMAL_WAR_RUDEBOI_NAME;$ORDER$$FIRST$ War of $SECOND$ Containment;$ORDER$$FIRST$ guerre de confinement $SECOND$;$ORDER$$FIRST$ Krieg der $SECOND$ Beherrschung;;;;;;;;;;;x
 NORMAL_WAR_SAHEL_JIHAD_NAME;$ORDER$$FIRST$ Jihad;;;;;;;;;;;;;x
