--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -53,6 +53,10 @@ call_allies_cb;Call Allies to Arms;;;;;;;;;;;;;
 call_allies_cb_desc;Call allies to join ongoing wars;;;;;;;;;;;;;
 call_allies_cb_setup;Call allies to join your ongoing wars;;;;;;;;;;;;;
 call_allies_cb_short;Call allies to join ongoing wars;;;;;;;;;;;;;
+caucasus_war;Conquer Dagestan;;;;;;;;;;;;;x
+caucasus_war_desc;We'll crash this rebellion of Dagestani and annex the region in its entirety.;;;;;;;;;;;;;x
+caucasus_war_setup;Conquer Dagestan;;;;;;;;;;;;;x
+caucasus_war_short;Conquer Dagestan;;;;;;;;;;;;;x
 cb_sykes_picot;The Asia Minor Agreement;;;;;;;;;;;;;x
 cb_sykes_picot_desc;This is where the description should go, if we had one.;;;;;;;;;;;;;x
 cb_sykes_picot_setup;Seize the Arab Provinces;;;;;;;;;;;;;x
@@ -61,6 +65,10 @@ china_acquire_state;Chinese Reunification;Prendre État;$STATE$ erwerben;;;;;;;;;
 china_acquire_state_desc;Acquire a Chinese §Ystate§W;Prendre un §YÉtat§W ennemi;Erobern Sie einen feindlichen §YStaat§W.;;;;;;;;;;;x
 china_acquire_state_setup;Acquire $STATE$ from $RECIPIENT$;Prendre $STATE$ de $RECIPIENT$;$STATE$ von $RECIPIENT$ erwerben;;;;;;;;;;;x
 china_acquire_state_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erwerben;;;;;;;;;;;x
+circassian_war;Conquer Circassia;;;;;;;;;;;;;x
+circassian_war_desc;If we want complete dominance over the Caucasus we have to destroy these uncivilized tribes.;;;;;;;;;;;;;x
+circassian_war_setup;Conquer Circassia;;;;;;;;;;;;;x
+circassian_war_short;Conquer Circassia;;;;;;;;;;;;;x
 civil_war;Civil War;Guerre civile;Bürgerkrieg;;;;;;;;;;;x
 civil_war_desc;Your nation is in a state of civil war;Votre nation est en guerre civile;Ihre Nation befindet sich in einem Bürgerkrieg.;;;;;;;;;;;x
 civil_war_setup;End the war by reuniting our nation under a common banner again.;Mettez fin à la guerre en réunifiant notre nation sous une même bannière.;Beenden Sie den Krieg durch die Wiedervereinigung unserer Nation unter einer gemeinsamen Flagge.;;;;;;;;;;;x
