--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -499,7 +499,7 @@ IBR_ADJ;Iberian;;;;;;;;;;;;;x
 LTU_ADJ;Latin;;;;;;;;;;;;;x
 ICL_ADJ;Icelandic;islandais;Isländisch;;;;;;;;;;;x
 IDO_ADJ;Indochinese;;;;;;;;;;;;;x
-IME_ADJ;Imeterian;;;;;;;;;;;;;x
+IME_ADJ;Imeretian;;;;;;;;;;;;;x
 IMG_ADJ;Mongolian;;;;;;;;;;;;;x
 IND_ADJ;Indori;Indori;Indori;;;;;;;;;;;x
 INO_ADJ;Indonesian;Indonésienne;Indonesisch;;;;;;;;;;;x
