--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1201,16 +1201,16 @@ IDO_hms_government;Indochina;;;;;;;;;;;;;x
 IDO_presidential_dictatorship;Indochina;;;;;;;;;;;;;x
 IDO_proletarian_dictatorship;Indochinese Populist Union;;;;;;;;;;;;;x
 IDO_prussian_constitutionalism;Indochina;;;;;;;;;;;;;x
-IME_absolute_monarchy;Imeteri;;;;;;;;;;;;;x
-IME_bourgeois_dictatorship;Imeteri;;;;;;;;;;;;;x
-IME_democracy;Imeteri;;;;;;;;;;;;;x
-IME_fascist_dictatorship;Imeteri;;;;;;;;;;;;;x
-IME_federal_democracy;Imeteri;;;;;;;;;;;;;x
-IME_hms_government;United Mtavaris of Imeteri;;;;;;;;;;;;;x
-IME_parliamentary_republic;United Mtavaris of Imeteri;;;;;;;;;;;;;x
-IME_presidential_dictatorship;Imeteri;;;;;;;;;;;;;x
-IME_proletarian_dictatorship;Imeterian SSR;;;;;;;;;;;;;x
-IME_prussian_constitutionalism;Imeteri;;;;;;;;;;;;;x
+IME_absolute_monarchy;Imereti;;;;;;;;;;;;;x
+IME_bourgeois_dictatorship;Imereti;;;;;;;;;;;;;x
+IME_democracy;Imereti;;;;;;;;;;;;;x
+IME_fascist_dictatorship;Imereti;;;;;;;;;;;;;x
+IME_federal_democracy;Imereti;;;;;;;;;;;;;x
+IME_hms_government;United Mtavaris of Imereti;;;;;;;;;;;;;x
+IME_parliamentary_republic;United Mtavaris of Imereti;;;;;;;;;;;;;x
+IME_presidential_dictatorship;Imereti;;;;;;;;;;;;;x
+IME_proletarian_dictatorship;Imeretian SSR;;;;;;;;;;;;;x
+IME_prussian_constitutionalism;Imereti;;;;;;;;;;;;;x
 IMG_colonial_company;Nei Menggu;;;;;;;;;;;;;x
 INO_colonial_company;Oost-Indie;;;;;;;;;;;;;x
 ION_democracy;Septinsular Republic;;;;;;;;;;;;;x
