validator fixes and re-removal of south_west_africa

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1988,7 +1988,7 @@ EVTOPTA999952;We’ll crush the Black Flags either way.;;;;;;;;;;;;;x
 EVTNAME999590;German Threat;;;;;;;;;;;;;x
 EVTDESC999590;Despite we had not initially thought of unified Germany as that much of a threat to our country, now that they have risen as high us as, alarm bells are ringing in Parliament and in various government and interest group backrooms, pointing out how threatening Germany now is and that we must undertake measures to preserve the balance of power in the world, and retain the hegemony we have on world affairs.;;;;;;;;;;;;;x
 EVTOPTA999590;It is time to look for allies on the Continent;;;;;;;;;;;;;x
-EVTOPTA999590;Nonsense, Germany is a friend;;;;;;;;;;;;;x
+EVTOPTB999590;Nonsense, Germany is a friend;;;;;;;;;;;;;x
 EVTOPTA999591;We can not be allies with @GER;;;;;;;;;;;;;x
 EVTOPTA999592;We can not be allies with @RUS;;;;;;;;;;;;;x
 EVTNAME999592;Russian Threat;;;;;;;;;;;;;x
