--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -655,6 +655,7 @@ PEU_2301;Ucayali & Pando;;;;;;;;;;;;;x
 PEU_2303;Arequipa;;;;;;;;;;;;;x
 BRZ_2306;São Paulo;;;;;;;;;;;;;x
 BOL_2309;Atacama;;;;;;;;;;;;;x
+BOL_2311;Cochabamba;;;;;;;;;;;;;x
 BOL_2313;Sucre;;;;;;;;;;;;;x
 BOL_2314;Potosí;;;;;;;;;;;;;x
 BOL_2315;Tarija;;;;;;;;;;;;;x
