GUI tag changed to GIZ

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2610,17 +2610,17 @@ GUA_colonial_company;Dominio de Guatemala;x;
 GUA_dominion;Dominio de Guatemala;x;
 GUA_ADJ;Guatemalteco;x;
 ##### GUI #####;
-GUI_absolute_monarchy;Qianjun;x;
-GUI_prussian_constitutionalism;Qianjun;x;
-GUI_hms_government;Qianjun;x;
-GUI_democracy;Qianjun;x;
-GUI_proletarian_dictatorship;Qianjun;x;
-GUI_presidential_dictatorship;Qianjun;x;
-GUI_bourgeois_dictatorship;Qianjun;x;
-GUI_fascist_dictatorship;Qianjun;x;
-GUI_colonial_company;Guizhou;x;
-GUI_dominion;Guizhou;x;
-GUI_ADJ;Guizhou de;x;
+GIZ_absolute_monarchy;Qianjun;x;
+GIZ_prussian_constitutionalism;Qianjun;x;
+GIZ_hms_government;Qianjun;x;
+GIZ_democracy;Qianjun;x;
+GIZ_proletarian_dictatorship;Qianjun;x;
+GIZ_presidential_dictatorship;Qianjun;x;
+GIZ_bourgeois_dictatorship;Qianjun;x;
+GIZ_fascist_dictatorship;Qianjun;x;
+GIZ_colonial_company;Guizhou;x;
+GIZ_dominion;Guizhou;x;
+GIZ_ADJ;Guizhou de;x;
 ##### GUY #####;
 GUY_absolute_monarchy;Dominion of Guyana;x;
 GUY_prussian_constitutionalism;Dominion of Guyana;x;
