--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -261,7 +261,7 @@ GRE;Greece;Grèce;Griechenland;;;;;;;;;;;x
 GRH;Garhwal;;;;;;;;;;;;;x
 GRN;Greenland;;;;;;;;;;;;;x
 GUA;Guatemala;Guatemala;Guatemala;;;;;;;;;;;x
-GUI;Guizhou;;;;;;;;;;;;;x
+GIZ;Guizhou;;;;;;;;;;;;;x
 GUY;Guyana;;;;;;;;;;;;;x
 GWA;Gwalior;Gwalior;Gwalior;;;;;;;;;;;x
 GXI;Guangxi;Clique de Guangxi;Guangxi-Clique;;;;;;;;;;;x
