--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -777,3 +777,4 @@ RUS_1101;Nakhichevan;;;;;;;;;;;;;x
 RUS_3706;Telavi;;;;;;;;;;;;;x
 RUS_1106;Karabakh;;;;;;;;;;;;;x
 RUS_3668;Berkhnyaya Kuban;;;;;;;;;;;;;x
+JAN_3355;Polar Bear Island;;;;;;;;;;;;;x
