--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -613,6 +613,7 @@ KYR_ADJ;Kyrgyz;;;;;;;;;;;;;x
 KZB_ADJ;Kazembe;Kazembe;Kazembe;;;;;;;;;;;x
 L0Z_ADJ;Lezgin;;;;;;;;;;;;;x
 L1Z_ADJ;Lezgin;;;;;;;;;;;;;x
+L2Z_ADJ;Lezgin;;;;;;;;;;;;;x
 L3Z_ADJ;Lezgin;;;;;;;;;;;;;x
 LEZ_ADJ;Lezgin;;;;;;;;;;;;;x
 LAD_ADJ;Ladakhi;Ladakhien;Ladakhisch;;;;;;;;;;;x
