--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -401,6 +401,7 @@ KWT;Kuwait;;;;;;;;;;;;;x
 KYR;Kyrgyzstan;;;;;;;;;;;;;x
 L0Z;Tairdjal;;;;;;;;;;;;;x
 L1Z;Dokuz-Para;;;;;;;;;;;;;x
+L2Z;Alty-Para;;;;;;;;;;;;;x
 L3Z;Akhty-Para;;;;;;;;;;;;;x
 LEZ;Lezgistan;;;;;;;;;;;;;x
 KZB;Kazembe;Kazembe;Kazembe;;;;;;;;;;;x
