--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2741,6 +2741,8 @@ the_great_game_darvaz_desc;We must press our domination of Central Asia. This me
 the_great_game_darvaz_title;The Great Game Comes to Darvaz;;;;;;;;;;;;;x
 the_great_game_kalat_desc;We must press our domination of Central Asia. This means that Kalat must be subjugated as a British colony, or we risk losing it to Russian aggression in the region.;;;;;;;;;;;;;x
 the_great_game_kalat_title;The Great Game Comes to Kalat;;;;;;;;;;;;;x
+the_great_game_khairpur_desc;We must press our domination of Central Asia. This means that the Khairpur must be subjugated as a British colony, or we risk losing it to Russian aggression in the region.;;;;;;;;;;;;;x
+the_great_game_khairpur_title;The Great Game Comes to Khairpur;;;;;;;;;;;;;x
 the_great_game_khiva_desc;We must press our domination of Central Asia. This means that Khiva must join our nation, or stand forever more subject to British aggression in the region.;;;;;;;;;;;;;x
 the_great_game_khiva_title;The Great Game Comes to Khiva;;;;;;;;;;;;;x
 the_great_game_kokand_desc;We must press our domination of Central Asia. This means that Kokand must join our nation, or stand forever more subject to British aggression in the region.;;;;;;;;;;;;;x
