--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3948,7 +3948,7 @@ PROV3946;Azau;;;;;;;;;;;;;x
 PROV3947;Rozhkao;;;;;;;;;;;;;x
 PROV3948;Prokhladnaya;;;;;;;;;;;;;x
 PROV3949;Yevlakh;;;;;;;;;;;;;x
-PROV3950;Dzhyeyranchyol;;;;;;;;;;;;;x
+PROV3950;Dolina Karayaz;;;;;;;;;;;;;x
 PROV3951;Chardakhli;;;;;;;;;;;;;x
 PROV3952;Bezhta;;;;;;;;;;;;;x
 PROV3953;Kedi;;;;;;;;;;;;;x
@@ -4015,3 +4015,4 @@ PROV4013;Ombú;;;;;;;;;;;;;x
 PROV4014;Mawo P’itsek;;;;;;;;;;;;;x
 PROV4015;Nacurutu;;;;;;;;;;;;;x
 PROV4016;Chañaritos;;;;;;;;;;;;;x
+PROV4017;Usukhchai;;;;;;;;;;;;;x
