--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -380,7 +380,7 @@ PROV378;Middelburg;;;;;;;;;;;;;x
 PROV379;Eindhoven;;;;;;;;;;;;;x
 PROV380;’s-Hertogenbosch;;;;;;;;;;;;;x
 PROV381;Maëstricht;;;;;;;;;;;;;x
-PROV382;Arnhem;;;;;;;;;;;;;x
+PROV382;Arnhem-Nijmegen;;;;;;;;;;;;;x
 PROV383;Groningen;;;;;;;;;;;;;x
 PROV384;Zwolle;;;;;;;;;;;;;x
 PROV385;Leeuwarden;;;;;;;;;;;;;x
@@ -3453,7 +3453,7 @@ PROV3451;Michikamau House;;;;;;;;;;;;;x
 PROV3452;Pelly Bay;;;;;;;;;;;;;x
 PROV3453;Kavala;;;;;;;;;;;;;x
 PROV3454;Manastir;;;;;;;;;;;;;x
-PROV3455;Nijmegen;;;;;;;;;;;;;x
+PROV3455;Tiel;;;;;;;;;;;;;x
 PROV3456;Gressoney;;;;;;;;;;;;;x
 PROV3457;Sankt Peter der Slawen;;;;;;;;;;;;;x
 PROV3458;Longwy;;;;;;;;;;;;;x
@@ -4016,3 +4016,5 @@ PROV4014;Mawo P’itsek;;;;;;;;;;;;;x
 PROV4015;Nacurutu;;;;;;;;;;;;;x
 PROV4016;Chañaritos;;;;;;;;;;;;;x
 PROV4017;Usukhchai;;;;;;;;;;;;;x
+PROV4018;Veluwe;;;;;;;;;;;;;x
+PROV4019;Achterhoek;;;;;;;;;;;;;x
