--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -807,3 +807,4 @@ ZBW;Zimbabwe;;;;;;;;;;;;;x
 ZFN;Zafaranlu;;;;;;;;;;;;;x
 ZOU;Zoutpansberg;;;;;;;;;;;;;x
 ZUL;Zulu;Zoulou;Zulu;;;;;;;;;;;x
+BRC;Claimed by Brazil.;;;;;;;;;;;x
