Dutch culture partitioned

--- a/TGC/localisation/00_pop-culture.csv
+++ b/TGC/localisation/00_pop-culture.csv
@@ -112,7 +112,7 @@ dutch_low_saxon;Dutch Low Saxon;;;;;;;;;;;;;x
 low_saxon;Low Saxon;;;;;;;;;;;;;x
 flemish;Flemish;;;;;;;;;;;;;x
 brabandish;Brabandish;;;;;;;;;;;;;x
-limburgish;Limburger;;;;;;;;;;;;;x
+limburgish;Limburgish;;;;;;;;;;;;;x
 druzes;Druze;;;;;;;;;;;;;x
 dyula;Dyula;Dioula;Dyula;;;;;;;;;;;x
 east_kwa;Kwa;;;;;;;;;;;;;x
