--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -940,3 +940,7 @@ EVTNAME8152;The Cabanagem was Prevailed!;;;;;;;;;;;;;x
 EVTDESC8152;\nThe Imperial Army failed to stop the revolution in the north! \n\nSadly we have to accept their secession, our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
 EVTOPTA8152;So be it. We don't need that useless jungle.;;;;;;;;;;;;;x
 EVTOPTB8152;We shall accept it, for now...;;;;;;;;;;;;;x
+EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
+EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
+EVTOPTA8400;A real gem indeed, and bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
+EVTOPTB8400;Doesn't he have better things to compose about?;;;;;;;;;;;;;x
