--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -944,3 +944,7 @@ EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, and bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
 EVTOPTB8400;Doesn't he have better things to compose about?;;;;;;;;;;;;;x
+EVTNAME8401;The Birth of the Brazilian Academy of Letters;;;;;;;;;;;;;x
+EVTDESC8401;In an effort to foster the continued evolution of Brazilian literature and arts, a group of esteemed writers, including luminaries like Machado de Assis, Lúcio de Mendonça, Inglês de Sousa, and many others, have come together to establish the Brazilian Academy of Letters. This ambitious endeavor aims to provide a platform for intellectual exchange, recognition, and preservation of our nation's literary heritage.;;;;;;;;;;;;;x
+EVTOPTA8401;I wish them good luck!;;;;;;;;;;;;;x
+EVTOPTB8401;We should support them!;;;;;;;;;;;;;x
