--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -425,3 +425,4 @@ webster_ashburton_cb;Secure the Frontier;;;;;;;;;;;;;x
 webster_ashburton_cb_desc;Enforce our views on the border between Canada and the United States.;;;;;;;;;;;;;x
 webster_ashburton_cb_setup;Assert our border with $RECIPIENT$;;;;;;;;;;;;;x
 webster_ashburton_cb_short;Settle border dispute;;;;;;;;;;;;;x
+take_claimed_land;Enforce Claims;;;;;;;;;;;;;x
