--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -86,6 +86,8 @@ AGRESSION_WAR_END_SLAVE_TRADE;Punitive Expedition against the Slave Traders;;;;;
 AGRESSION_WAR_ENFORCE_CLAYTON_TREATY;$FIRST$ War to Enforce Clayton-Bulwer Treaty on $SECOND$;;;;;;;;;;;;;x
 AGRESSION_WAR_FORALLIES_NAME;$ORDER$$FIRST$ Conquest of $STATE$ for $COUNTRY$;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_ALLIED_CORE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Restoration;;;;;;;;;;;;;x
+AGRESSION_WAR_TAKE_CLAIM;$ORDER$$FIRST$ enforcing of claims;;;;;;;;;;;;;x
+NORMAL_WAR_TAKE_CLAIM;$ORDER$$FIRST$ enforcing of claims;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_BALKANS_NAME;The $ORDER$$FIRST$–$SECOND$ War of the Balkans;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_NAME;$ORDER$$FIRST$ War of Propping up $COUNTRY$;$ORDER$$FIRST$ guerre de soutien de $COUNTRY$;$ORDER$$FIRST$ Krieg zur Absicherung von $COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_GUNBOAT_NAME;Gunboat Diplomacy;;;;;;;;;;;;;x
