--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -426,3 +426,6 @@ webster_ashburton_cb_desc;Enforce our views on the border between Canada and the
 webster_ashburton_cb_setup;Assert our border with $RECIPIENT$;;;;;;;;;;;;;x
 webster_ashburton_cb_short;Settle border dispute;;;;;;;;;;;;;x
 take_claimed_land;Enforce Claims;;;;;;;;;;;;;x
+take_claimed_land_desc;Forcefully take claimed lands.;;;;;;;;;;;;;x
+take_claimed_land_setup;Forcefully take claimed lands;;;;;;;;;;;;;x
+take_claimed_land_short;Forcefully take claimed lands;;;;;;;;;;;;;x
