--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -936,10 +936,16 @@ EVTOPTA8151;Damnit!;;;;;;;;;;;;;x
 EVTNAME8152;The Cabanagem was defeated!;;;;;;;;;;;;;x
 EVTDESC8152;\nThe Imperial Army has finally defeated the revolt in the north! \n\nUnrest is still high, but the rebels have been tamed and all our is rightfully under our control!;;;;;;;;;;;;;x
 EVTOPTA8152;They had it coming!;;;;;;;;;;;;;x
-EVTNAME8152;The Cabanagem was Prevailed!;;;;;;;;;;;;;x
-EVTDESC8152;\nThe Imperial Army failed to stop the revolution in the north! \n\nSadly we have to accept their secession, our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
-EVTOPTA8152;So be it. We don't need that useless jungle.;;;;;;;;;;;;;x
-EVTOPTB8152;We shall accept it, for now...;;;;;;;;;;;;;x
+EVTNAME8153;The Cabanagem has Prevailed!;;;;;;;;;;;;;x
+EVTDESC8153;\nThe Imperial Army failed to stop the revolution in the north! \n\nSadly we have to accept their secession, as our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
+EVTOPTA8153;So be it. We don't need that useless piece of jungle.;;;;;;;;;;;;;x
+EVTOPTB8153;We shall accept it, for now...;;;;;;;;;;;;;x
+EVTNAME8160;Liberalism in the Northwest;;;;;;;;;;;;;x
+EVTDESC8160;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region.;;;;;;;;;;;;;x
+EVTOPTA8160;Dangerous ideas!;;;;;;;;;;;;;x
+EVTNAME8161;Liberalism Spreads;;;;;;;;;;;;;x
+EVTDESC8161;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region.;;;;;;;;;;;;;x
+EVTOPTA8161;Dangerous ideas!;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, and bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
