--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -937,15 +937,27 @@ EVTNAME8152;The Cabanagem was defeated!;;;;;;;;;;;;;x
 EVTDESC8152;\nThe Imperial Army has finally defeated the revolt in the north! \n\nUnrest is still high, but the rebels have been tamed and all our is rightfully under our control!;;;;;;;;;;;;;x
 EVTOPTA8152;They had it coming!;;;;;;;;;;;;;x
 EVTNAME8153;The Cabanagem has Prevailed!;;;;;;;;;;;;;x
-EVTDESC8153;\nThe Imperial Army failed to stop the revolution in the north! \n\nSadly we have to accept their secession, as our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
+EVTDESC8153;\nThe Imperial Army failed to stop the revolution in the north! \n\nThere's nothing to be done, and we have to accept their secession as our army failed to secure the region, which is now far gone from our control.;;;;;;;;;;;;;x
 EVTOPTA8153;So be it. We don't need that useless piece of jungle.;;;;;;;;;;;;;x
-EVTOPTB8153;We shall accept it, for now...;;;;;;;;;;;;;x
-EVTNAME8160;Liberalism in the Northwest;;;;;;;;;;;;;x
-EVTDESC8160;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region.;;;;;;;;;;;;;x
-EVTOPTA8160;Dangerous ideas!;;;;;;;;;;;;;x
+EVTOPTB8153;We shall accept it, for now;;;;;;;;;;;;;x
+EVTNAME8160;The Praieiros Party;;;;;;;;;;;;;x
+EVTDESC8160;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region. n\ But the situation got worse and there are talks about rebellion. \n\nWe should get a hold of the region before it's too late, we can't afford to let those ideas spread.;;;;;;;;;;;;;x
+EVTOPTA8160;Dangerous ideas indeed!;;;;;;;;;;;;;x
 EVTNAME8161;Liberalism Spreads;;;;;;;;;;;;;x
-EVTDESC8161;The liberal agitation spreads!;;;;;;;;;;;;;x
-EVTOPTA8161;Dangerous ideas!;;;;;;;;;;;;;x
+EVTDESC8161;The liberal rebelion is spreading further! We need to do something about it!;;;;;;;;;;;;;x
+EVTOPTA8161;Bad News.;;;;;;;;;;;;;x
+EVTNAME8162;The Praieiros Rebellion!;;;;;;;;;;;;;x
+EVTDESC8162;The Northwest revolted! \n\nThe Praieiros took over the province and called up other provinces to rebel against the central Brazilian government!;;;;;;;;;;;;;x
+EVTOPTA8162;Filthy rebels!;;;;;;;;;;;;;x
+EVTOPTB8162;Damn the central government!;;;;;;;;;;;;;x
+EVTNAME8163;The Praieiros Rebellion!;;;;;;;;;;;;;x
+EVTDESC8163;The Northwest revolted has revolted and is currently out of our control. \n\nThe Praieiros Party took over and called up other rebellions provinces, a true civil war has begun. \n\nWe should now decided if the fight is worth the risk, the government is already in extremely bad shape and the war effort may make us even more unstable, on the other hand, just accepting the rebellion stir even more rebellions or shake the very core of teh brazilian state foundation.;;;;;;;;;;;;;x
+EVTOPTA8163;We will retake what is ours!;;;;;;;;;;;;;x
+EVTOPTB8163;It's over. We can't afford to go into an war like this.!;;;;;;;;;;;;;x
+EVTNAME8166;The Brazilian Army Prevails!;;;;;;;;;;;;;x
+EVTDESC8166;The Brazilian Army managed to pacify the provinces up north and put an end to the civil war. \n\n While it is a glorious day in our history, it was a massive undertaking and it will be years before a full recovery. The country is in a terrible state, and we need to get everything together before our enemies prey upon our current weak state.;;;;;;;;;;;;;x
+EVTOPTA8166;Pride and Glory!;;;;;;;;;;;;;x
+EVTOPTB8166;Honor the dead!;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
