--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -958,6 +958,14 @@ EVTNAME8166;The Brazilian Army Prevails!;;;;;;;;;;;;;x
 EVTDESC8166;The Brazilian Army managed to pacify the provinces up north and put an end to the civil war. \n\n While it is a glorious day in our history, it was a massive undertaking and it will be years before a full recovery. The country is in a terrible state, and we need to get everything together before our enemies prey upon our current weak state.;;;;;;;;;;;;;x
 EVTOPTA8166;Pride and Glory!;;;;;;;;;;;;;x
 EVTOPTB8166;Honor the dead!;;;;;;;;;;;;;x
+EVTNAME8167;The Praieiros broke free.;;;;;;;;;;;;;x
+EVTDESC8167;The Brazilian Army failed to pacify the provinces up north. \n\n We lost the civil war. \n\n Besides all the money and efforts poured into it, the was is lost. The Praieiros managed to stablish themselves and the nordeste region is now out of our control.;;;;;;;;;;;;;x
+EVTOPTA8167;This is truly a terrible blow to the nation as a whole.;;;;;;;;;;;;;x
+EVTNAME8170;The end of $COUNTRY$.;;;;;;;;;;;;;x
+EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the Brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united Brasilian state.;;;;;;;;;;;;;x
+EVTOPTA8170;We are brasilians, we will stay as brasilians!;;;;;;;;;;;;;x
+EVTOPTB8170;Reorganize the government around our central cores, we can still salvage this country.;;;;;;;;;;;;;x
+EVTOPTC8170;So be it. Brazil will be no more.;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
